--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 
 python:
   - "2.7"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "pypy"
+  - "pypy3"
 
 before_install:
   - sudo apt-get update -qq
